[package]
name = "bevy_iced"
version = "0.5.0"
edition = "2021"
description = "Iced integration for Bevy"
authors = ["tasgon <me@tas.sh>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "iced", "ui", "game", "gui"]
homepage = "https://github.com/tasgon/bevy_iced"
repository = "https://github.com/tasgon/bevy_iced"
documentation = "https://docs.rs/bevy_iced"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.12"
bevy_derive = "0.12"
bevy_ecs = "0.12"
bevy_input = "0.12"
bevy_math = "0.12"
bevy_render = "0.12"
bevy_utils = "0.12"
bevy_window = "0.12"

iced_core = { git = "https://github.com/iced-rs/iced.git", rev = "817f72868746461891ca4e74473c555f3b5c5703" }
iced_runtime = { git = "https://github.com/iced-rs/iced.git", rev = "817f72868746461891ca4e74473c555f3b5c5703" }
iced_wgpu = { git = "https://github.com/iced-rs/iced.git", rev = "817f72868746461891ca4e74473c555f3b5c5703" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", rev = "817f72868746461891ca4e74473c555f3b5c5703" }
iced_renderer = { git = "https://github.com/iced-rs/iced.git", rev = "817f72868746461891ca4e74473c555f3b5c5703", features = [
    "wgpu",
] }

wgpu = "=0.17.1"

[dev-dependencies]
bevy = "0.12"
rand = "0.8"
